First attempt with libraries fixed

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="footer">Big Data University © 2014</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">********</string>
-    <string name="home_guard_main_text">Home Guard</string>
+    <string name="home_guard_main_text">HOME GUARD</string>
 
 </resources>
